feat: add counterparties
